Add mouse events to notes widget
Partial fix for #115, still requires figuring out why the links are in
the wrong place.

--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -561,8 +561,12 @@
                         <property name="visible">True</property>
                         <property name="app_paintable">True</property>
                         <property name="can_focus">False</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
+                        <signal name="button-press-event" handler="track_clicks" swapped="no"/>
+                        <signal name="button-release-event" handler="track_clicks" swapped="no"/>
                         <signal name="configure-event" handler="on_configure_da" swapped="no"/>
                         <signal name="draw" handler="on_draw" swapped="no"/>
+                        <signal name="motion-notify-event" handler="track_motions" swapped="no"/>
                       </object>
                     </child>
                     <child type="label">
