--- a/pympress/share/xml/shortcuts.glade
+++ b/pympress/share/xml/shortcuts.glade
@@ -17,7 +17,8 @@
             <property name="title" translatable="yes" context="shortcut window">Navigating</property>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_next">
+                <property name="name">shortcut_next</property>
                 <property name="visible">1</property>
                 <property name="accelerator">Right Down Page_Down space</property>
                 <property name="title" translatable="yes" context="shortcut window">Next slide</property>
@@ -25,7 +26,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_prev">
+                <property name="name">shortcut_prev</property>
                 <property name="visible">1</property>
                 <property name="accelerator">Left Up Page_Up</property>
                 <property name="title" translatable="yes" context="shortcut window">Previous slide</property>
@@ -33,7 +35,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_next_label">
+                <property name="name">shortcut_next_label</property>
                 <property name="visible">1</property>
                 <property name="accelerator">&lt;shift&gt;Right &lt;shift&gt;Down &lt;shift&gt;Page_Up</property>
                 <property name="title" translatable="yes" context="shortcut window">Next slide with different label</property>
@@ -41,7 +44,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_prev_label">
+                <property name="name">shortcut_prev_label</property>
                 <property name="visible">1</property>
                 <property name="accelerator">&lt;shift&gt;Left &lt;shift&gt;Up &lt;shift&gt;Page_Up</property>
                 <property name="title" translatable="yes" context="shortcut window">Previous slide with different label</property>
@@ -49,7 +53,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_first">
+                <property name="name">shortcut_first</property>
                 <property name="visible">1</property>
                 <property name="accelerator">Home</property>
                 <property name="title" translatable="yes" context="shortcut window">First slide</property>
@@ -57,7 +62,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_last">
+                <property name="name">shortcut_last</property>
                 <property name="visible">1</property>
                 <property name="accelerator">End</property>
                 <property name="title" translatable="yes" context="shortcut window">Last slide</property>
@@ -65,7 +71,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_hist_back">
+                <property name="name">shortcut_hist_back</property>
                 <property name="visible">1</property>
                 <property name="accelerator">BackSpace</property>
                 <property name="title" translatable="yes" context="shortcut window">Go back in slide history</property>
@@ -73,7 +80,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_hist_forward">
+                <property name="name">shortcut_hist_forward</property>
                 <property name="visible">1</property>
                 <property name="accelerator">&lt;shift&gt;BackSpace</property>
                 <property name="title" translatable="yes" context="shortcut window">Go forward in slide history</property>
@@ -81,7 +89,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_goto_page">
+                <property name="name">shortcut_goto_page</property>
                 <property name="visible">1</property>
                 <property name="accelerator">g</property>
                 <property name="title" translatable="yes" context="shortcut window">Go to page number</property>
@@ -89,7 +98,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_jumpto_label">
+                <property name="name">shortcut_jumpto_label</property>
                 <property name="visible">1</property>
                 <property name="accelerator">j</property>
                 <property name="title" translatable="yes" context="shortcut window">Jump to page label</property>
@@ -105,7 +115,8 @@
             <property name="title" translatable="yes" context="shortcut window">Timers</property>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_pause_timer">
+                <property name="name">shortcut_pause_timer</property>
                 <property name="visible">1</property>
                 <property name="accelerator">p Pause</property>
                 <property name="title" translatable="yes" context="shortcut window">Play/pause timer</property>
@@ -113,7 +124,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_reset_timer">
+                <property name="name">shortcut_reset_timer</property>
                 <property name="visible">1</property>
                 <property name="accelerator">r</property>
                 <property name="title" translatable="yes" context="shortcut window">Reset timer</property>
@@ -121,7 +133,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_talk_time">
+                <property name="name">shortcut_talk_time</property>
                 <property name="visible">1</property>
                 <property name="accelerator">t</property>
                 <property name="title" translatable="yes" context="shortcut window">Set estimated talk time</property>
@@ -137,7 +150,8 @@
             <property name="title" translatable="yes" context="shortcut window">Additional features</property>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_annotations">
+                <property name="name">shortcut_annotations</property>
                 <property name="visible">1</property>
                 <property name="accelerator">a</property>
                 <property name="title" translatable="yes" context="shortcut window">Toggle annotations</property>
@@ -145,7 +159,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_notes_mode">
+                <property name="name">shortcut_notes_mode</property>
                 <property name="visible">1</property>
                 <property name="accelerator">n</property>
                 <property name="title" translatable="yes" context="shortcut window">Toggle notes mode</property>
@@ -153,7 +168,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_highlighting">
+                <property name="name">shortcut_highlighting</property>
                 <property name="visible">1</property>
                 <property name="accelerator">h</property>
                 <property name="title" translatable="yes" context="shortcut window">Toggle highlighting</property>
@@ -161,7 +177,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_zoom">
+                <property name="name">shortcut_zoom</property>
                 <property name="visible">1</property>
                 <property name="accelerator">z</property>
                 <property name="title" translatable="yes" context="shortcut window">Zoom</property>
@@ -169,7 +186,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_unzoom">
+                <property name="name">shortcut_unzoom</property>
                 <property name="visible">1</property>
                 <property name="accelerator">u</property>
                 <property name="title" translatable="yes" context="shortcut window">Unzoom</property>
@@ -177,7 +195,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_undo_scribble">
+                <property name="name">shortcut_undo_scribble</property>
                 <property name="visible">1</property>
                 <property name="accelerator">&lt;ctrl&gt;z</property>
                 <property name="title" translatable="yes" context="shortcut window">Undo highlight stroke</property>
@@ -185,7 +204,17 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_validate">
+                <property name="name">shortcut_validate</property>
+                <property name="visible">1</property>
+                <property name="accelerator">Return</property>
+                <property name="title" translatable="yes" context="shortcut window">Validate goto/jump destination</property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkShortcutsShortcut" id="shortcut_cancel">
+                <property name="name">shortcut_cancel</property>
                 <property name="visible">1</property>
                 <property name="accelerator">Escape</property>
                 <property name="title" translatable="yes" context="shortcut window">Cancel goto/jump/highlighting/zooming</property>
@@ -201,7 +230,8 @@
             <property name="title" translatable="yes" context="shortcut window">Manage files</property>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_open_file">
+                <property name="name">shortcut_open_file</property>
                 <property name="visible">1</property>
                 <property name="accelerator">o</property>
                 <property name="title" translatable="yes" context="shortcut window">Open file</property>
@@ -209,7 +239,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_close_file">
+                <property name="name">shortcut_close_file</property>
                 <property name="visible">1</property>
                 <property name="accelerator">&lt;ctrl&gt;w</property>
                 <property name="title" translatable="yes" context="shortcut window">Close file</property>
@@ -217,7 +248,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_quit">
+                <property name="name">shortcut_quit</property>
                 <property name="visible">1</property>
                 <property name="accelerator">q</property>
                 <property name="title" translatable="yes" context="shortcut window">Quit</property>
@@ -233,7 +265,8 @@
             <property name="title" translatable="yes" context="shortcut window">Windows</property>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_fullscreen_content">
+                <property name="name">shortcut_fullscreen_content</property>
                 <property name="visible">1</property>
                 <property name="accelerator">f F11 &lt;ctrl&gt;l</property>
                 <property name="title" translatable="yes" context="shortcut window">Toggle fullscreen</property>
@@ -241,7 +274,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_swap_screens">
+                <property name="name">shortcut_swap_screens</property>
                 <property name="visible">1</property>
                 <property name="accelerator">s</property>
                 <property name="title" translatable="yes" context="shortcut window">Swap windows</property>
@@ -249,7 +283,8 @@
             </child>
 
             <child>
-              <object class="GtkShortcutsShortcut">
+              <object class="GtkShortcutsShortcut" id="shortcut_blank_screen">
+                <property name="name">shortcut_blank_screen</property>
                 <property name="visible">1</property>
                 <property name="accelerator">b</property>
                 <property name="title" translatable="yes" context="shortcut window">Blank screen</property>
