--- a/pympress/share/xml/content.glade
+++ b/pympress/share/xml/content.glade
@@ -36,12 +36,14 @@
                 <property name="name">c_da</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
+                <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK</property>
                 <signal name="button-press-event" handler="track_clicks" swapped="no"/>
                 <signal name="button-release-event" handler="track_clicks" swapped="no"/>
                 <signal name="motion-notify-event" handler="track_motions" swapped="no"/>
                 <signal name="draw" handler="on_draw" swapped="no"/>
                 <signal name="configure-event" handler="on_configure_da" swapped="no"/>
+                <signal name="enter-notify-event" handler="track_enter_leave" swapped="no"/>
+                <signal name="leave-notify-event" handler="track_enter_leave" swapped="no"/>
               </object>
             </child>
           </object>
