--- a/pympress/share/xml/shortcuts.glade
+++ b/pympress/share/xml/shortcuts.glade
@@ -177,6 +177,15 @@
             </child>
 
             <child>
+              <object class="GtkShortcutsShortcut" id="shortcut_pointermode">
+                <property name="name">shortcut_pointermode</property>
+                <property name="visible">1</property>
+                <property name="accelerator">l</property>
+                <property name="title" translatable="yes" context="shortcut window">Toggle laserpointer</property>
+              </object>
+            </child>
+
+            <child>
               <object class="GtkShortcutsShortcut" id="shortcut_zoom">
                 <property name="name">shortcut_zoom</property>
                 <property name="visible">1</property>
