Small fixes and additional improvements to PR
- Refactor config upgrade into Config class
- GtkWidget::visibility-notify-event is deprecated and apparently not needed
- Pass notifications directly to laser pointer
- No names needed for a boolean value
- Use an enum to track the pointer state
- Rename pointer_none to disabled
- Match name in shortcuts to command name

--- a/pympress/share/xml/content.glade
+++ b/pympress/share/xml/content.glade
@@ -42,8 +42,8 @@
                 <signal name="motion-notify-event" handler="track_motions" swapped="no"/>
                 <signal name="draw" handler="on_draw" swapped="no"/>
                 <signal name="configure-event" handler="on_configure_da" swapped="no"/>
-                <signal name="enter-notify-event" handler="track_enter_leave" swapped="no"/>
-                <signal name="leave-notify-event" handler="track_enter_leave" swapped="no"/>
+                <signal name="enter-notify-event" handler="laser.track_enter_leave" swapped="no"/>
+                <signal name="leave-notify-event" handler="laser.track_enter_leave" swapped="no"/>
               </object>
             </child>
           </object>
