--- a/pympress/share/xml/highlight.glade
+++ b/pympress/share/xml/highlight.glade
@@ -20,7 +20,7 @@
               <object class="GtkEventBox" id="scribble_p_eb">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK</property>
+                <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
                 <signal name="button-press-event" handler="track_clicks" swapped="no"/>
                 <signal name="button-release-event" handler="track_clicks" swapped="no"/>
                 <signal name="motion-notify-event" handler="track_motions" swapped="no"/>
@@ -31,8 +31,6 @@
                     <property name="can_focus">False</property>
                     <signal name="draw" handler="on_draw" swapped="no"/>
                     <signal name="configure-event" handler="on_configure_da" swapped="no"/>
-                    <signal name="enter-notify-event" handler="laser.track_enter_leave" swapped="no"/>
-                    <signal name="leave-notify-event" handler="laser.track_enter_leave" swapped="no"/>
                   </object>
                 </child>
               </object>
