--- a/pympress/share/xml/time_report_dialog.glade
+++ b/pympress/share/xml/time_report_dialog.glade
@@ -5,6 +5,7 @@
   <object class="GtkDialog" id="time_report_dialog">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Presentation timing breakdown</property>
+    <property name="default_height">700</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">normal</property>
     <property name="gravity">north-east</property>
@@ -13,6 +14,7 @@
     </child>
     <child internal-child="vbox">
       <object class="GtkBox">
+        <property name="width_request">700</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
@@ -29,67 +31,70 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTreeView" id="timing_treeview">
-            <property name="name">timing_treeview</property>
-            <property name="height_request">700</property>
+          <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="vscroll_policy">natural</property>
-            <property name="enable_search">False</property>
-            <property name="enable_grid_lines">vertical</property>
-            <property name="enable_tree_lines">True</property>
-            <child internal-child="selection">
-              <object class="GtkTreeSelection"/>
-            </child>
+            <property name="shadow_type">in</property>
             <child>
-              <object class="GtkTreeViewColumn" id="name_renderer">
-                <property name="fixed_width">500</property>
-                <property name="title" translatable="yes">name</property>
-                <property name="expand">True</property>
-                <child>
-                  <object class="GtkCellRendererText"/>
-                  <attributes>
-                    <attribute name="text">0</attribute>
-                  </attributes>
+              <object class="GtkTreeView" id="timing_treeview">
+                <property name="name">timing_treeview</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="vscroll_policy">natural</property>
+                <property name="enable_search">False</property>
+                <property name="enable_grid_lines">vertical</property>
+                <property name="enable_tree_lines">True</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection"/>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkTreeViewColumn" id="time_renderer">
-                <property name="sizing">fixed</property>
-                <property name="fixed_width">60</property>
-                <property name="title" translatable="yes">time</property>
                 <child>
-                  <object class="GtkCellRendererText"/>
-                  <attributes>
-                    <attribute name="text">1</attribute>
-                  </attributes>
+                  <object class="GtkTreeViewColumn" id="name_renderer">
+                    <property name="fixed_width">500</property>
+                    <property name="title" translatable="yes">name</property>
+                    <property name="expand">True</property>
+                    <child>
+                      <object class="GtkCellRendererText"/>
+                      <attributes>
+                        <attribute name="text">0</attribute>
+                      </attributes>
+                    </child>
+                  </object>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkTreeViewColumn" id="duration_renderer">
-                <property name="sizing">fixed</property>
-                <property name="fixed_width">60</property>
-                <property name="title" translatable="yes">duration</property>
                 <child>
-                  <object class="GtkCellRendererText"/>
-                  <attributes>
-                    <attribute name="text">2</attribute>
-                  </attributes>
+                  <object class="GtkTreeViewColumn" id="time_renderer">
+                    <property name="fixed_width">60</property>
+                    <property name="title" translatable="yes">time</property>
+                    <child>
+                      <object class="GtkCellRendererText"/>
+                      <attributes>
+                        <attribute name="text">1</attribute>
+                      </attributes>
+                    </child>
+                  </object>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkTreeViewColumn" id="page_renderer">
-                <property name="sizing">fixed</property>
-                <property name="fixed_width">60</property>
-                <property name="title" translatable="yes">slide</property>
                 <child>
-                  <object class="GtkCellRendererText"/>
-                  <attributes>
-                    <attribute name="text">3</attribute>
-                  </attributes>
+                  <object class="GtkTreeViewColumn" id="duration_renderer">
+                    <property name="fixed_width">60</property>
+                    <property name="title" translatable="yes">duration</property>
+                    <child>
+                      <object class="GtkCellRendererText"/>
+                      <attributes>
+                        <attribute name="text">2</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn" id="page_renderer">
+                    <property name="fixed_width">60</property>
+                    <property name="title" translatable="yes">slide</property>
+                    <child>
+                      <object class="GtkCellRendererText"/>
+                      <attributes>
+                        <attribute name="text">3</attribute>
+                      </attributes>
+                    </child>
+                  </object>
                 </child>
               </object>
             </child>
